fix: line break

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
 
     </body>
     <footer>
-        This is possible due to the amazing open and free API at <a href="https://sholiday.faboul.se/">https://sholiday.faboul.se/</a>
+        This is possible due to the amazing open and free API at <a href="https://sholiday.faboul.se/">https://sholiday.faboul.se/</a><br>
         This page was created just for fun, all code is public in <a href="https://github.com/MazrimT/reddays">Github</a>
     </footer>
 </html>
