feat: added favicon yay!

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
             {% endblock %}
 
             <title>Röda dagar</title>
+            <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% endblock %}
     </head>
     <body>
