feat: checkbox to show weekend days or not

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,14 +32,16 @@
             });
             </script>
         {% endblock %}
-
+        <br><br>
 
     
 
     </body>
     <footer>
-        This is possible due to the amazing open and free API at <a href="https://sholiday.faboul.se/">https://sholiday.faboul.se/</a><br>
-        This page was created just for fun, all code is public in <a href="https://github.com/MazrimT/reddays">Github</a>
+        <p>
+        This is possible due to the amazing open and free API at <a href="https://sholiday.faboul.se/" target=”_blank”>https://sholiday.faboul.se/</a><br>
+        This page was created just for fun, all code is public in <a href="https://github.com/MazrimT/reddays" target=”_blank”>Github</a>
+        </p>
     </footer>
 </html>
 
