--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -10,9 +10,12 @@ table {
     background-color: #dbdbda;
 }
 footer {
-    position: absolute;
-    bottom: 0;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     width: 100%;
-    height: 2.5rem;   
+    height: auto;   
     font-size: 12px;
+    background-color: white;
 }
