--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,18 +3,22 @@
 {% block content %}
 <center>
 <a href="{{ url_for('index.v_index') }}" style="text-decoration: none; color: black;"><font size="14">Röda dagar</a></font>
-</center>
-<br>
-<center>
 
+<br>
 <form method="POST" action="">
-    <select class="form-control form-control-lg" name="year" id="view" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onchange="this.form.submit()" style="width: auto">
+    <select class="form-control form-control-lg" name="year" id="view" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  style="width: auto" onchange="this.form.submit()">
         {% for year in years %}
         <option value="{{ year }}" {% if year == default_year %} selected {% endif %}{% if year == current_year %}class="current_year"{% endif %}>{{ year }}</option>
         {% endfor %}
     </select>
-</form>
-</center>
+    <br>
+    <input class="form-check-input" name="checkbox" type="checkbox" value="" id="checkbox" onchange="this.form.submit()" {% if not show_weekend %}checked{% endif %}>
+    <label class="form-check-label" for="checkbox">
+      Dölj veckoslut
+    </label>
+
+</form>  
+
 <br>
 <table class="table table-striped table-bordered table-hover mx-auto" id="sortTable">
     <tr> 
@@ -24,11 +28,17 @@
     </tr>
 {% for day in days %}
     <tr>
-        <td>{{ day.datum }}</td>
-        <td>{{ day.veckodag}}</td>
-        <td>{{ day.helgdag }}</td>
+        <td>{{ day.date }}</td>
+        <td>{{ day.weekday }}</td>
+        <td>{{ day.holiday }}{% if not day.red %}*{% endif %}</td>
     </tr>
 {% endfor %}
 </table>
-
+{% if has_none_red %}<font size="2px">* ej lagstadgad svensk helgdag men arbetsfri dag på många arbetsplatser och kollektivavtal.</font>{% endif %}
+<br>
+<br>
+<a href="https://rkrattsbaser.gov.se/sfst?bet=1989:253" target=”_blank”>Lag om allmänna helgdagar</a>
+<br>
+<br>
+</center>
 {% endblock %}
