making it better

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             {% endblock %}
 
             <title>Röda dagar</title>
-            <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+            <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
         {% endblock %}
     </head>
     <body>
