--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
         <td>{{ day.week }}</td>
         <td>{{ day.date }}</td>
         <td>{{ day.weekday }}</td>
-        <td>{{ day.holiday }}{% if not day.red %} *{% endif %}{% if day.flag %} <img src="{{ url_for('static', filename='flagga_small.gif') }}" title="{{ day.flag_reason }}" alt="{{ day.flag_reason }}" width="15" height="10">{% endif %}</td>
+        <td>{{ day.holiday }}{% if not day.red %} *{% endif %}{% if day.flag %} <img src="{{ url_for('static', filename='images/flagga_small.gif') }}" title="{{ day.flag_reason }}" alt="{{ day.flag_reason }}" width="15" height="10">{% endif %}</td>
     </tr>
 {% endfor %}
 
