--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+    <center>
+        <br><br><br>
     <h2>404 page not found</h2> 
     Nothing to se here, move along, move along<br>
     <br>
-    <img src="{{url_for('static', filename='404.jpg')}}"/>
-
+    <img src="{{ url_for('static', filename='images/404.jpg') }}"/>
+    </center>
 {% endblock %}
