Adds squeeze days to the page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-CC0CZ4VN6V');
-    </script>        
+    </script>
         {% block head %}
             <!-- Required meta tags -->
             <meta charset="utf-8">
@@ -26,12 +26,12 @@
         {% endblock %}
     </head>
     <body>
-       
+
         <!-- Your page content -->
         {% block content %}
         {% endblock %}
 
-        
+
         {% block scripts %}
             <!-- Optional JavaScript -->
             {{ bootstrap.load_js() }}
@@ -43,14 +43,14 @@
         {% endblock %}
         <br><br>
 
-    
+
 
     </body>
     <footer>
         <p>
         This is possible due to the amazing open and free API at <a href="https://sholiday.faboul.se/" target=”_blank”>https://sholiday.faboul.se/</a><br>
-        This page was created just for fun, all code is public in <a href="https://github.com/MazrimT/reddays" target=”_blank”>Github</a>
+        This page was created just for fun, all code is public in <a href="https://github.com/MazrimT/reddays" target=”_blank”>Github</a><br>
+        Link to swedish laws concerning holidays: <a href="https://rkrattsbaser.gov.se/sfst?bet=1989:253" target=”_blank”>Lag om allmänna helgdagar</a>
         </p>
     </footer>
 </html>
-
