--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <center>
-<a href="{{ url_for('index.v_index') }}" style="text-decoration: none; color: black;"><font size="14">Röda dagar</a></font>
+<h1>Röda dagar</h1>
 
 <br>
 <form method="POST" action="">
@@ -61,6 +61,8 @@
 {% endfor %}
 </table>
 <font size="2px">* Om typ är Enkel så är dagen före och efter en arbetsfri dag. Om Dubbel så är det två efterföljande arbetsdagar med arbetsfria dagar före och efter</font>
+<br>
+<br>
 <br>
 <br>
 <br>
